add form template

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,12 +5,15 @@
       
     </a>
 
-    <p id="logo" >Vote on Quotes</p>
-
-
-    <div class="bar icon-large" style="text-align:center">
-        <fa-icon [icon]="faBars"></fa-icon>
+    <div>
+        <i class="fas fa-bars"></i>
     </div>
+
+    <!-- <p id="logo" >Vote on Quotes</p> -->
+
+    
+
+
 
   </nav>
 
