--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
      {{ title }}
   </h1>
 
+  
+
+  
 
 
   <!-- <div style="text-align:center">
@@ -15,4 +18,6 @@
 
 
 <app-navbar></app-navbar>
+<app-form></app-form>
+
 <router-outlet></router-outlet>
