add options for category field

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div>
   <h1>
      {{ title }}
   </h1>
-
-  
-
-  
-
-
-  <!-- <div style="text-align:center">
-    <fa-icon [icon]="faCoffee"></fa-icon>
-  </div> -->
+<div></div>
 
   
 
 
 
+<div class="navigation">
 <app-navbar></app-navbar>
+</div>
 <app-form></app-form>
 
 <router-outlet></router-outlet>
