--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+
 <div class= "container" id="navigation">
   <nav class="navbar sticky-top" id="navbar">
     <a class="navbar-brand" href="#">
@@ -11,12 +12,14 @@
 
     <!-- <p id="logo" >Vote on Quotes</p> -->
 
-    
-
-
+    <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
 
   </nav>
-
 
 </div>
 
