--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -7,25 +7,53 @@
           <div class="form-group">
             <!-- quote field -->
             <label for="quote">Quote: </label>
-            <textarea name="quote" class="form-control"  id="quote" cols="30" rows="10" required [(ngModel)]="model.quote"></textarea>
+            <textarea name="quote" class="form-control"  id="quote" cols="30" rows="10" [(ngModel)]="model.quote" #quote="ngModel" required></textarea>
+          </div>
+
+          <!-- quote field validation -->
+          <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
+
+            This field is required!
+
           </div>
 
           <div class="form-group">
             <!-- author field -->
             <label for="author">Author: </label>
-            <input type="text" name="author" class="form-control" id="author" required [(ngModel)]="model.author">
+            <input type="text" name="author" class="form-control" id="author" [(ngModel)]="model.author" #author="ngModel" required>
+          </div>
+
+          <!-- author field validation -->
+          <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+
+              This field is required!
+  
           </div>
 
           <div class="form-group">
             <!-- contributor field -->
             <label for="contributor">Contributor: </label>
-            <input type="text" name="contributor" class="form-control" id="contributor" required [(ngModel)]="model.contributor">
+            <input type="text" name="contributor" class="form-control" id="contributor" [(ngModel)]="model.contributor" #contributor="ngModel" required>
+          </div>
+
+          <!-- contributor field validation -->
+          <div [hidden]="contributor.valid || contributor.pristine" class="alert alert-danger">
+
+              This field is required!
+  
           </div>
 
           <div class="form-group">
               <!-- category field -->
               <label for="category">Category: </label>
               <select class="form-control" name="category" id="category" required [(ngModel)]="model.category">
+
+              <!-- category field validation -->
+          <div [hidden]="category.valid || category.pristine" class="alert alert-danger">
+
+              This field is required!
+  
+          </div>
   
                 <!-- use ng for to loop through choices of categories (interpolation) -->
                 <option *ngFor= "let option of options">{{option.category}}</option>
@@ -33,12 +61,12 @@
             </div>
 
           <!-- submit button -->
-          <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+          <button type="submit" class="btn btn-primary btn-lg btn-block" (click)="newQuote()">Submit</button>
      
         </form>
       </div>
       <!-- 2-way data binding displays here -->
-      <div class="col">
+      <div class="col" id="quote-display">
         {{model.id}}
         {{model.quote}}
         {{model.author}}
