--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,11 @@
 
 
 
-<div class="navigation">
+<!-- <div class="navigation">
 <app-navbar></app-navbar>
-</div>
+</div> -->
+
 <app-form></app-form>
+
 
 <router-outlet></router-outlet>
