--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-  <div class="row">
+  <div [hidden]="submitted">
     <div class="col" id="publish">
-        <h1>Publish</h1>
+        <h1>Publish your Quote</h1>
 
-        <form (ngSubmit)="publishQuote()"  #quoteForm="ngForm">
+        <form (ngSubmit)="onSubmit()" #quoteForm="ngForm">
           <div class="form-group">
             <!-- quote field -->
             <label for="quote">Quote: </label>
@@ -60,25 +60,57 @@
               </select>
             </div>
 
+          <div class="row">
+
+            <div class="col-6">
+
           <!-- submit button -->
-          <button type="submit" class="btn btn-primary btn-lg btn-block" (click)="newQuote()">Submit</button>
+          <button type="button" id="submit" class="btn btn-default btn-block" [disabled]="!quoteForm.form.valid">Submit</button>
+
+            </div>
+
+            <div class="col-6">
+
+          <!-- reset button -->
+
+          <button type="button" id="reset" class="btn btn-default btn-block" (click)="newQuote(); quoteForm.reset()">New Quote</button>
+
+        </div>
+
+          </div>
      
         </form>
       </div>
+
+      
       <!-- 2-way data binding displays here -->
-      <div class="col" id="quote-display">
+      
         <!-- {{model.id}} -->
-        {{model.quote}}
+        <!-- {{model.quote}}
         {{model.author}}
         {{model.contributor}}
-        {{model.category}}
-      </div>
-
-      <!-- display time stamp here -->
-      <div class="">
-        
-      </div>
-      
+        {{model.category}} -->
 
       </div>
+
+      <div [hidden]="!submitted">
+          <h2>You submitted the following:</h2>
+          <div class="row">
+            <div class="col-xs-3">Quote:</div>
+            <div class="col-xs-9">{{ model.quote }}</div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">Author: </div>
+            <div class="col-xs-9">{{ model.author }}</div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">Contributor: </div>
+            <div class="col-xs-9">{{ model.contributor }}</div>
+          </div>
+          <br>
+          
+          <button class="btn btn-primary" (click)="submitted=false">Edit</button>
+        </div>
+
+
     </div>
