--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div [hidden]="submitted">
-    <div class="col" id="publish">
+    <div class="col" id="submit-form">
         <h1>Publish your Quote</h1>
 
         <form (ngSubmit)="onSubmit()" #quoteForm="ngForm">
@@ -65,7 +65,9 @@
             <div class="col-6">
 
           <!-- submit button -->
-          <button type="button" id="submit" class="btn btn-default btn-block" [disabled]="!quoteForm.form.valid">Submit</button>
+          <button type="submit" id="submit" class="btn btn-default btn-block" [disabled]="!quoteForm.form.valid">Submit</button>
+
+         
 
             </div>
 
@@ -73,7 +75,7 @@
 
           <!-- reset button -->
 
-          <button type="button" id="reset" class="btn btn-default btn-block" (click)="newQuote(); quoteForm.reset()">New Quote</button>
+          <button type="button" id="reset" class="btn btn-default btn-block" (click)="newQuote(); quoteForm.reset()">Reset</button>
 
         </div>
 
@@ -93,10 +95,11 @@
 
       </div>
 
-      <div [hidden]="!submitted">
-          <h2>You submitted the following:</h2>
+      <div class="container-fluid">
+      <div [hidden]=!submitted>
+          <h4>You submitted the following:</h4>
           <div class="row">
-            <div class="col-xs-3">Quote:</div>
+            <div class="col-xs-3">Quote: </div>
             <div class="col-xs-9">{{ model.quote }}</div>
           </div>
           <div class="row">
@@ -109,8 +112,16 @@
           </div>
           <br>
           
-          <button class="btn btn-primary" (click)="submitted=false">Edit</button>
+          <!-- edit button -->
+          <button class="btn btn-default btn-block" id="edit" (click)="submitted=false">Edit</button>
+
+
+          <!-- delete button -->
+          
+          <button class="btn btn-default btn-block" id="publish" (click)="submitted=false">Publish</button>
+          
         </div>
+      </div>
 
 
     </div>
