change app title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,9 @@
   </h1>
 <div></div>
 
-  
 
 
-
-<!-- <div class="navigation">
-<app-navbar></app-navbar>
-</div> -->
-
-<app-form></app-form>
+<app-home></app-home>
 
 
 <router-outlet></router-outlet>
