--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,13 +1,15 @@
+<div class container>
+
 <div class="container-fluid">
-  <div [hidden]="submitted">
-    <div class="col" id="submit-form">
+  <div class="row">
+    <div class="col-12" id="submit-form">
         <h1>Publish your Quote</h1>
 
         <form (ngSubmit)="onSubmit()" #quoteForm="ngForm">
           <div class="form-group">
             <!-- quote field -->
             <label for="quote">Quote: </label>
-            <textarea name="quote" class="form-control"  id="quote" cols="30" rows="10" [(ngModel)]="model.quote" #quote="ngModel" required></textarea>
+            <textarea name="quote" class="form-control"  id="quote" cols="" rows="10" [(ngModel)]="model.quote" #quote="ngModel" required></textarea>
           </div>
 
           <!-- quote field validation -->
@@ -80,8 +82,11 @@
         </div>
 
           </div>
+
      
         </form>
+
+        <p></p>
       </div>
 
       
@@ -96,32 +101,68 @@
       </div>
 
       <div class="container-fluid">
+          <h1>My Quotes</h1>
       <div [hidden]=!submitted>
-          <h4>You submitted the following:</h4>
+          <h4></h4>
+
+          <form (ngSubmit)='publishQuote()' #quoteForm='ngForm'>
           <div class="row">
-            <div class="col-xs-3">Quote: </div>
-            <div class="col-xs-9">{{ model.quote }}</div>
+            
+            <div class="">{{ model.quote }}</div>
           </div>
+
           <div class="row">
-            <div class="col-xs-3">Author: </div>
-            <div class="col-xs-9">{{ model.author }}</div>
+            
+            <div class="">{{ model.author }}</div>
           </div>
+
           <div class="row">
-            <div class="col-xs-3">Contributor: </div>
-            <div class="col-xs-9">{{ model.contributor }}</div>
+            
+            <div class="">{{ model.contributor }}</div>
           </div>
+
+          <div class="row">
+            
+              <div class="">{{ model.category }}</div>
+            </div>
+
+        </form>
           <br>
+
+          <!-- post button -->
           
-          <!-- edit button -->
-          <button class="btn btn-default btn-block" id="edit" (click)="submitted=false">Edit</button>
+          <button type="submit" id="publish" class="btn btn-default btn-block" (click)="quoteForm.reset(); addArticle(quote, author, contributor)">Post</button>
 
-
+<!-- submit button
+<button type="submit" id="submit" class="btn btn-default btn-block" [disabled]="!quoteForm.form.valid">Submit</button> -->
+          
+          
           <!-- delete button -->
+          <button class="btn btn-default btn-block" id="delete" (click)="submitted=false">Delete</button>
+
           
-          <button class="btn btn-default btn-block" id="publish" (click)="submitted=false">Publish</button>
+          <div [hidden]=submitted id="article">
+              <ul quote-listing>
+                  <li *ngFor='let quote of quotes'>
+                      <div class="single-quote">
+                        <p>{{ model.quote }}</p>
+                        <p>{{ model.author }}</p>
+                        <p>{{ model.contributor }}</p>
+                      
+                      </div>
+                  </li>
+    
+                </ul>
+          </div>
+
           
+
         </div>
       </div>
 
 
     </div>
+
+</div>
+
+
