add new quotes array

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <h1>
-     {{ title }}
-  </h1>
-<div></div>
-
-
-
-<app-home></app-home>
-
-
+{{title}}
+<app-quotes></app-quotes>
 <router-outlet></router-outlet>
