display quotes listing

--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -4,12 +4,12 @@
 <div><span>contributor: </span>{{contributor.id}}</div>
 <div><span>category: </span>{{category.quote}}</div> -->
 <!-- <div><span>dateSubmitted: </span>{{dateSubmitted.id}}</div> -->
-<h2>{{quote.quote}}</h2>
-<div>
-  <label for=""></label>
-  <!-- two-way data binding -->
-  <input type="text" [(ngModel)]= 'quote.quote' placeholder='quote here'>
-</div>
+<h2>My Quotes</h2>
+<ul class="article">
+  <li *ngFor="let quote of quotes">
+    <span class="article">{{quote.id}}</span> {{quote.quote}}
+  </li>
+</ul>
 
 
 
