add input field, change favicon icon

--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -12,5 +12,13 @@
   </li>
 </ul>
 
+<h2>{{selectedQuote.name}} Details</h2>
+<div><span>id: </span>{{selectedQuote.id}}</div>
+<div>
+  <label>quote:
+    <input [(ngModel)]="selectedQuote.quote" placeholder="quote">
+  </label>
+</div>
+
 
 
