--- a/src/app/quote-vote/quote-vote.component.html
+++ b/src/app/quote-vote/quote-vote.component.html
@@ -9,15 +9,15 @@
     <a class="" href="{{ link }}">
     {{ quote }} </a>
     <ul class=""> <li class="item">
-    <a href (click)="voteUp()">
+    <a href (click)="upVotes()">
     <i class="arrow up icon"></i>
     upvote </a>
     </li>
     <li class="item">
-    <a href (click)="voteDown()">
+    <a href (click)="downVotes()">
     <i class="arrow down icon"></i> downvote
     </a> </li>
     </ul> </div>
 
 
-    <app-quote-article></app-quote-article>
+    
