--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -5,12 +5,12 @@
 <div><span>category: </span>{{category.quote}}</div> -->
 <!-- <div><span>dateSubmitted: </span>{{dateSubmitted.id}}</div> -->
 
-<h2>My Quotes</h2>
+<h2>Quotes</h2>
 
 <ul class="quotes">
 
   <li *ngFor="let quote of quotes" (click)="onSelect(quote)" [class.selected]="quote === selectedQuote">
-    <span class="badge">{{quote.id}}</span> {{quote.quote}}
+    <span class="badge">{{quote.id}}</span> " {{quote.quote}} " <span>- {{quote.author}}</span>
   </li>
 
 </ul>
