--- a/src/app/quotes/quotes.component.css
+++ b/src/app/quotes/quotes.component.css
@@ -1,5 +1,5 @@
 /* Component colors */
-
+/* 
 .selected {
   background-color: #CFD8DC !important;
   color: white;
@@ -46,4 +46,4 @@
   height: 5em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
-}
+} */
