--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-{{title}}
+<div>
+  <app-navbar></app-navbar>
+</div>
+
+<h1>{{title}}</h1>
 <app-quotes></app-quotes>
 <router-outlet></router-outlet>
