--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -5,7 +5,7 @@
     <div class="col-12" id="submit-form">
         <h1>Publish your Quote</h1>
 
-        <form (ngSubmit)="onSubmit()" #quoteForm="ngForm">
+        <form (ngSubmit)="onSubmit(); submitQuote()" #quoteForm="ngForm">
           <div class="form-group">
             <!-- quote field -->
             <label for="quote">Quote: </label>
@@ -66,7 +66,7 @@
 
             <div class="col-6">
 
-          <!-- submit button -->
+          <!-- *** submit button -->
           <button type="submit" id="submit" class="btn btn-default btn-block" [disabled]="!quoteForm.form.valid">Submit</button>
 
          
@@ -105,7 +105,7 @@
       <div [hidden]=!submitted>
           <h4></h4>
 
-          <form (ngSubmit)='publishQuote()' #quoteForm='ngForm'>
+          <form (ngSubmit)='submitQuote()' #quoteForm="ngForm">
           <div class="row">
             
             <div class="">{{ model.quote }}</div>
@@ -131,7 +131,7 @@
 
           <!-- post button -->
           
-          <button type="submit" id="publish" class="btn btn-default btn-block" (click)="quoteForm.reset(); addArticle(quote, author, contributor)">Post</button>
+          <button type="submit" id="publish" class="btn btn-default btn-block" (click)="quoteForm.reset(); ">Post</button>
 
 <!-- submit button
 <button type="submit" id="submit" class="btn btn-default btn-block" [disabled]="!quoteForm.form.valid">Submit</button> -->
@@ -166,3 +166,31 @@
 </div>
 
 
+
+
+
+<form (ngSubmit)="submitQuote()" #quoteForm="ngForm">
+
+  <div [hidden]=!submitted>
+  <div class="form-group">
+    {{ model.id }}
+  </div>
+
+  <div class="form-group">
+    {{ model.quote }}
+  </div>
+
+  <div class="form-group">
+    {{ model.author }}
+  </div>
+
+  <div class="form-group">
+    {{ model.contributor }}
+  </div>
+
+</div>
+
+</form>
+
+  <!-- *** publish button -->
+  <button type="submit" id="submit" class="btn btn-default btn-block">Publish</button>
