add button functions

--- a/src/app/quote-form/quote-form.component.css
+++ b/src/app/quote-form/quote-form.component.css
@@ -50,6 +50,11 @@
   background-color: #41ead4;
 }
 
+#new{
+  color: #ffffff;
+  background-color: #757575;
+}
+
 /* end of buttons */
 
 .article {
