arrange components on parent component

--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="quote">
+<!-- <div *ngIf="quote">
 
     <h2>Quote Details</h2>
     <div><span>contributor: </span>{{quote.contributor}}</div>
@@ -8,12 +8,14 @@
       </label>
     </div>
   
-  </div>
+  </div> -->
 
  <!-- property binding -->
 
  <!-- 
 <app-quote-detail [quote]="selectedQuote"></app-quote-detail> -->
 
-
+<div>
+    <app-quote-vote></app-quote-vote>
+    </div>
 
