--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -127,13 +127,13 @@
               <p>This is what you have submitted: </p>
             <div class= "rounded" id = "submitted">
               <div class="form-field">
-                " {{ quote }} "
+                " {{ model.quote }} "
               </div>
 
               <br>
             
               <div class="form-group">
-                - {{ author }}
+                - {{ model.author }}
               </div>
 
             </div>
