add voting panel and blockquote section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,19 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<!-- <div>
   <app-navbar></app-navbar>
-</div>
+</div> -->
 
+<!-- form -->
+<app-quote-form></app-quote-form>
 
+<!-- quote listing -->
 <app-quotes></app-quotes>
+
+<!-- quote details -->
+<app-quote-detail></app-quote-detail>
+
+<!-- quote votes -->
+<app-quote-vote></app-quote-vote>
+
+<!-- for routing-->
 <router-outlet></router-outlet>
