--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,13 +1,14 @@
 <div class="container">
-  <div [hidden]="submitted">
+
+    <!-- [hidden]="submitted" -->
+  <div>
     <h1>Publish</h1>
     <form (ngSubmit)="onSubmit()" #quoteForm="ngForm">
       <div class="form-group">
         <label for="quote">Quote: </label>
-        <input type="text" class="form-control" id="quote"
-               required
+        <textarea type="text" class="form-control" id="quote"
                [(ngModel)]="model.quote" name="quote"
-               #quote="ngModel">
+               #quote="ngModel" rows="5" required></textarea>
         <div [hidden]="quote.valid || quote.pristine"
              class="alert alert-danger">
           Quote is required!
@@ -17,13 +18,14 @@
       <div class="form-group">
         <label for="Author">Author: </label>
         <input type="text" class="form-control" id="author"
-               [(ngModel)]="model.author" name="author">
+               [(ngModel)]="model.author" name="author" required>
+               
       </div>
 
       <div class="form-group">
         <label for="Contributor">Contributor: </label>
         <input type="text" class="form-control" id="contributor"
-               [(ngModel)]="model.contributor" name="contributor">
+               [(ngModel)]="model.contributor" name="contributor" required>
       </div>
 
       <div class="form-group">
@@ -41,21 +43,25 @@
 
 
 
-      <button type="submit" class="btn btn-success" [disabled]="!quoteForm.form.valid">Submit</button>
-      <button type="button" class="btn btn-default" (click)="newQuote(); quoteForm.reset()">New Hero</button>
+      <button type="submit" id="submit" class="btn btn-default btn-block btn-primary" [disabled]="!quoteForm.form.valid">Submit</button>
+
+      <button type="button" id="reset" class="btn btn-default btn-block btn-primary" (click)="newQuote(); quoteForm.reset()">New Quote</button>
     </form>
   </div>
 
-  <div [hidden]="!submitted">
-    <h2>You submitted the following:</h2>
+  <!-- [hidden]="!submitted" 
+  <div>
+    <h2>Quotes Listing:</h2>
     <div class="row">
       <div class="col-xs-3">Quote</div>
-      <div class="col-xs-9">{{ model.quote }}</div>
+      <div class="col-xs-9">" {{ model.quote }} "</div>
     </div>
     <div class="row">
       <div class="col-xs-3">Author</div>
-      <div class="col-xs-9">{{ model.author }}</div>
+      <div class="col-xs-9">- {{ model.author }} -</div>
     </div>
+
+    -To be provided by qoute details componenet
     <div class="row">
       <div class="col-xs-3">Contributor</div>
       <div class="col-xs-9">{{ model.contributor }}</div>
@@ -64,9 +70,58 @@
       <div class="col-xs-3">Category</div>
       <div class="col-xs-9">{{ model.category }}</div>
     </div>
+    
     <br>
     <button class="btn btn-primary" (click)="submitted=false">Edit</button>
   </div>
 </div>
+
+-->
+
+<div class="container text-center">
+
+    <div class="row justify-center">
+  
+      <div class="card text-primary mt-5">
+  
+        <blockquote class="blockquote">
+  
+          <p class="m=0 p-3">
+              " {{ model.quote }} "
+          </p>
+
+          <p class="m=0 p-3">
+              - {{ model.author }} -
+          </p>
+  
+        </blockquote>
+  
+        
+  
+  <!-- twitter button -->
+  <a target="blank" 
+  [href]= "'https://twitter.com/intent/tweet?text=' + quote.quote"
+  
+  class="btn btn-outline-primary" (click) = "getQuote()">
+  <i class="fab fa-twitter-square"></i>
+  </a>
+  
+  <!-- add quote button -->
+  <button class="btn btn-outline-primary" (click) = "getQuote()">
+  <i class= "fa fa-plus"></i>
+  </button>
+  
+  <!-- delete quote button -->
+  <button class="btn btn-outline-primary" (click) = "deleteQuote()">
+    <i class= "fa fa-minus"></i>
+    </button>
+  
+      </div>
+  
+  
+  
+  </div>
+  
+  </div>
 
 
