--- a/src/app/quote-vote/quote-vote.component.html
+++ b/src/app/quote-vote/quote-vote.component.html
@@ -1,3 +1,66 @@
+<div class="container text-center">
+
+    <div class="row justify-center">
+  
+      <div class="card text-primary mt-5">
+  
+        <blockquote class="blockquote">
+  
+          <p class="m=0 p-3">
+              " {{ model.quote }} "
+          </p>
+
+          <p class="m=0 p-3">
+              - {{ model.author }} -
+          </p>
+  
+        </blockquote>
+  
+        
+  
+  <!-- twitter button -->
+  <a target="blank" 
+  [href]= "'https://twitter.com/intent/tweet?text=' + quote.quote"
+  
+  class="btn btn-outline-primary" (click) = "getQuote()">
+  <i class="fab fa-twitter-square"></i>
+  </a>
+  
+  <!-- add quote button -->
+  <button class="btn btn-outline-primary" (click) = "getQuote()">
+  <i class= "fa fa-plus"></i>
+  </button>
+  
+  <!-- delete quote button -->
+  <button class="btn btn-outline-primary" (click) = "deleteQuote()">
+    <i class= "fa fa-minus"></i>
+    </button>
+  
+      </div>
+  
+  
+  
+  </div>
+  
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- <div class="">
   <div class="">
     <div class="value"> {{ votes }}
